Linear Regression: Stochastic

--- a/Linear Regression/LinearRegression_Basic.ipynb
+++ b/Linear Regression/LinearRegression_Basic.ipynb
@@ -11,9 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 선형 회귀\n",
-    "\n",
-    "일반적으로 선형 모델은 입력 특성의 가중치 합과 편향(bias)를 더해 예측을 만든다."
+    "## 4.1 Linear Regression"
    ]
   },
   {
@@ -102,11 +100,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 4.2 Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.94054413]\n",
+      " [2.94315404]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.1 # learning rate\n",
+    "n_iterations = 1000\n",
+    "m = 100\n",
+    "\n",
+    "theta = np.random.randn(2, 1)\n",
+    "for iter in range(n_iterations):\n",
+    "    grad = 2/m * X_b.T.dot(X_b.dot(theta) - y)\n",
+    "    theta = theta - alpha * grad\n",
+    "\n",
+    "print(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.90536058]\n",
+      " [2.90192004]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# stochastic gradient descent\n",
+    "n_epochs = 50\n",
+    "t1, t2 = 5, 50\n",
+    "\n",
+    "def learning_schedule(t):\n",
+    "    return t1 / (t + t2)\n",
+    "\n",
+    "theta = np.random.rand(2, 1)\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    for i in range(m):\n",
+    "        rand_idx = np.random.randint(m)\n",
+    "        sample_x = X_b[rand_idx: rand_idx+1]\n",
+    "        sample_y = y[rand_idx: rand_idx+1]\n",
+    "        grad = 2 * sample_x.T.dot(sample_x.dot(theta) - sample_y)\n",
+    "        learning_rate = learning_schedule(epoch * m + i)\n",
+    "        theta = theta - learning_rate * grad\n",
+    "        \n",
+    "print(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10.52825518]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y[0])"
+   ]
   }
  ],
  "metadata": {
