--- a/Support Vector Machine/NonLinearSVM.ipynb
+++ b/Support Vector Machine/NonLinearSVM.ipynb
@@ -186,6 +186,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 서포트 벡터 머신의 근본 아이디어는 무엇인가요?\n",
+    "\n",
+    "ans : 구분해야 하는 class로 묶인 데이터들 사이의 마진을 최대화 하는 결정경게를 찾는 것.\n",
+    "서로 다른 클래스들을 잘 구분하는 결정 경계를 제공함과 동시에 훈련 샘플로부터 이 결정 경계사이의 거리를 최대화 하는 것.\n",
+    "\n",
+    "<p style=\"color:red;\"> \n",
+    " 클래스 사이에 가능한 한 가장 넓은 도로를 내는 것. 두 클래스를 구분하는 결정 경계와 샘플 사이의 마진을 가능한 가장 크게 하는 것이 목적.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 서포트 벡터가 무엇인가요?\n",
+    "\n",
+    "ans: 결정 경계로부터 훈련 샘플을 멀리 떨어뜨리기 위해서 결정 경계 바깥에 위치한 샘플을 통해 추가적인 마진 경계를 생성하는 것\n",
+    "이러한 훈련 샘플(결정 경계와 가장 가까운 각각의 훈련 샘플)을 서포트 벡터라 한다.\n",
+    "\n",
+    "<p style=\"color:red;\">\n",
+    "SVM이 훈련된 후에 경계를 포함해 도로에 놓인 어떤 샘플. 결정 경계는 전적으로 서포트 벡터에 의해 결정된다. \n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. SVM을 사용할 때 입력값의 스케일이 왜 중요한가요?\n",
+    "\n",
+    "ans: SVM은 특성의 스케일에 민감한 방식이다. 한쪽의 스케일이 다른 한쪽의 스케일보다 훨씬 큰 경우에는 결정 경계가 수평하거나 수직인 형태로 나타나게 되며, 이는 스케일이 작은 특성을 무시하게 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. SVM 분류기가 샘플을 분류할 떄 신뢰도와 확률을 출력할 수 있나요?\n",
+    "\n",
+    "ans: SVM은 테스트 샘플과 결정 경계 사이의 거리를 출력할 수 있으므로 이를 신뢰도 점수로 활용가능. 하지만, 확률을 출력할 수는 없다. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. 수백만개의 샘플과 수백 개의 특성을 가진 훈련 세트에 SVM모델을 훈련시키려면 원 문제와 쌍대 문제중 어떤 것을 선택해야 하나요?\n",
+    "\n",
+    "ans: 커널 SVM은 쌍대 형식만 사용할 수 있다. 원 문제의 계산 복잡도는 훈련 샘플수에 비례하지만, 쌍대 형식의 계산 복잡도는 그제곱이나 세제곱에 비례한다. 따라서 훈련 샘플의 개수가 많을 경우 쌍대 형식은 느릴 것"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
