--- a/RandomForest/RandomForest.ipynb
+++ b/RandomForest/RandomForest.ipynb
@@ -553,6 +553,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rnd_clf = RandomForestClassifier(n_estimators=500, max_leaf_nodes=16, n_jobs=-1)\n",
+    "rnd_clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf = rnd_clf.predict(X_test)\n",
+    "print(accuracy_score(y_test, y_pred_rf))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
